fix(inpage-navigation): fix z-index - FRONT-3708 (#2610)

--- a/src/implementations/vanilla/components/site-header-harmonised/site-header-harmonised-ec.scss
+++ b/src/implementations/vanilla/components/site-header-harmonised/site-header-harmonised-ec.scss
@@ -22,6 +22,7 @@ $_logo-width-lg: 15.1rem;
   background-color: map.get(theme.$color, 'white-100');
   margin: 0;
   position: relative;
+  z-index: 2;
   /* stylelint-disable plugin/selector-bem-pattern */
   .ecl-menu {
     background: transparent;
